# shoal

./: .calcipy.json  .copier-answers.yml  .flake8  .pre-commit-config.yaml  .ruff.toml  404.html  README.md  dodo.py  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  ruff.toml  run  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup/: action.yml
.github/workflows/: ci_pipeline.yml
docs/: CNAME  README.md  gen_ref_nav.py
docs/Advanced_Documentation/: index.html
docs/CHANGELOG/: index.html
docs/CODE_TAG_SUMMARY/: index.html
docs/DEVELOPER_GUIDE/: index.html
docs/STYLE_GUIDE/: index.html
docs/docs/: CHANGELOG.md  CODE_TAG_SUMMARY.md  DEVELOPER_GUIDE.md
modules/shoal/_code_diagrams/: index.html
reference/SUMMARY/: index.html
reference/shoal/: index.html
reference/shoal/_cli/: index.html
reference/shoal/_ling/: index.html
reference/shoal/_log/: index.html
reference/shoal/_private/: index.html
reference/shoal/_runtime_type_check_setup/: index.html
reference/shoal/_shell/: index.html
reference/shoal/_tang/: index.html
reference/shoal/_tangs/: index.html
scripts/: check_imports.py  main.py  shoals.py
search/: search_index.json
shoal/: __init__.py  _ling.py  _log.py  _shell.py  _tang.py  _tangs.py  can_skip.py  cli.py  invoke_helpers.py  log.py  pretty_process.py  scripts.py  shell.py  tang.py
shoal/_private/: cli.py
shoal/dev_boards/: README.md  __init__.py  cli.py  scripts.py
tests/: __init__.py  configuration.py  test_can_skip.py  test_shell.py  test_zz_shoal.py
(+27 files in other folders)
