[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.commitizen]
version = "1.0.0rc0"
version_files = ["pyproject.toml:^version", "shoal/__init__.py:^__version"]

[tool.poetry]
authors = ["Kyle King <dev.act.kyle@gmail.com>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
] # https://pypi.org/classifiers/
description = "Experimental tasks that extends calcipy's functionality"
documentation = "https://shoal.kyleking.me"
include = ["LICENSE"]
keywords = []
license = "MIT"
maintainers = []
name = "shoal"
readme = "docs/README.md"
repository = "https://github.com/kyleking/shoal"
version = "1.0.0"

[tool.poetry.dependencies]
python = ">=3.11.2,<3.12"
corallium = ">=0.3.0"
pandera = ">=0.15.1"
textual = ">=0.40.0"

[tool.poetry.group.dev.dependencies]
calcipy = {extras = ["doc", "lint", "nox", "stale", "tags", "test", "types"], version = ">=2.0.1"}

[tool.poetry.scripts]
brds = "shoal.dev_boards.scripts:start"
dev-boards = "shoal.dev_boards.scripts:start"
shoal = "shoal.scripts:start"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kyleking/shoal/issues"
"Changelog" = "https://github.com/kyleking/shoal/blob/main/docs/docs/CHANGELOG.md"

[tool.pyright]
include = ["shoal"]
pythonVersion = "3.11"

[tool.tomlsort]
all = true
in_place = true
sort_first = ["python"]
trailing_comma_inline_array = true
